--- a/build.gradle
+++ b/build.gradle
@@ -15,8 +15,8 @@ apply plugin: 'eclipse'
 apply plugin: 'maven-publish'
 
 version = '1.0'
-group = 'org.sprojects.' // http://maven.apache.org/guides/mini/guide-naming-conventions.html
-archivesBaseName = 'mod'
+group = 'org.sprojects' // http://maven.apache.org/guides/mini/guide-naming-conventions.html
+archivesBaseName = 'smod'
 
 sourceCompatibility = targetCompatibility = compileJava.sourceCompatibility = compileJava.targetCompatibility = '1.8' // Need this here so eclipse task generates correctly.
 
