--- a/build.gradle
+++ b/build.gradle
@@ -86,7 +86,7 @@ dependencies {
 jar {
     manifest {
         attributes([
-            "Specification-Title": "examplemod",
+            "Specification-Title": "smod",
             "Specification-Vendor": "examplemodsareus",
             "Specification-Version": "1", // We are version 1 of ourselves
             "Implementation-Title": project.name,
@@ -115,3 +115,4 @@ publishing {
         }
     }
 }
+sourceSets { main { output.resourcesDir = output.classesDir } }
